[package]
name = "metrik-docker-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
constime = "0.2.2"
docker-api = "0.14.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tide = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
