[package]
name = "metrik-docker-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
docker-api = "0.14.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
rand = "0.8.5"
log = "0.4.21"
fern = "0.6.2"
humantime = "2.1.0"
owo-colors = "4.0.0"

[build-dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
